@@ -1,4 +1,4 @@
-# P4/P5：重规划编排、原子发布与报告生命周期持久化（E50/E51/E52/E53/E54/E55/E56/E57/E58/E59/E60/E61/E62/E63/E64/E65/E66/E67）
+# P4/P5：重规划编排、原子发布与报告生命周期持久化（E50/E51/E52/E53/E54/E55/E56/E57/E58/E59/E60/E61/E62/E63/E64/E65/E66/E67/E68）
 
 记录日期：2026-09-20。此批次只做后端合同、JDBC 持久化和 H2 定向验证；没有启动 Docker、应用、真实 MySQL、真实模型或浏览器。
 
@@ -88,6 +88,10 @@
 ### E67：typed response bridge
 
 扩展 `AgentRunResult`，保留既有 9 参数构造和旧字段序列化；新增的 sanitized `report` 仅在有值时输出。`CampaignAgentRunResultAdapter` 接受既有运行结果与 E66 trusted legacy view，以 view 的 answer/status/report 为唯一响应事实，复制并冻结 cards、pending actions、tool calls、data sources、trace events 和 warnings；只把 schema、availability、execution status、reportRef、blocks、goal assessments、goal rollup 与 limitations 带入 response，不暴露 snapshot 的 owner/capability/retention 元数据。状态矩阵和 null/矛盾输入在 adapter 与 response record 两层 fail closed。本批没有修改 Graph、checkpoint、controller、Spring 装配或 durable run→report 查询，因此 adapter 尚未由生产运行路径调用。
+
+### E68：typed run-result projection
+
+新增纯 `CampaignRunResultProjection`，把已授权的 `CampaignProgressView` 与可选 `CampaignReportReadProjection.Snapshot` 组合成固定 `campaign-run-result/v1`。投影只接受显式的 server-owned `ExecutionStatus` 与 `NextAction`，不从自由文本推断状态；严格校验 run/plan/revision、draft 与 reportRef、逐目标集合及终态 work state。`EXECUTED` 只有在所有目标真实 `ANSWERED` 且存在可交付 block 时才能映射为 `SUCCEEDED`；`WAITING` 可携带部分报告（durable `BLOCKED` 映射为公开等待态），运行中、失败、未知状态不得带完整报告，`CANCELLED`/`SUPERSEDED` 永不暴露过期报告。输出只保留 reportRef、blocks、goal assessments、汇总和限制说明，列表不可变，不带 payload、owner、capability、retention 或复用元数据。本批仍不写数据库、不读 Graph checkpoint、不注册 controller 或 Spring 入口。
 
 ## 定向验证
 
@@ -191,6 +195,14 @@ mvn.cmd -o -pl services/agent-service -am -Dtest=CampaignAgentRunResultAdapterTe
 
 结果：12 tests，0 failures，0 errors，0 skipped；`BUILD SUCCESS`。覆盖旧 9 参数构造和旧 JSON（report 缺省时不输出）、trusted view answer 覆盖旧自由文本、complete/partial/waiting/failed 映射、列表不可变、状态矩阵矛盾拒绝，以及 controller/harness 既有响应回归。
 
+E68 定向验证：
+
+```text
+mvn.cmd -o -pl services/agent-service -am -Dtest=CampaignRunResultProjectionTest -Dsurefire.failIfNoSpecifiedTests=false -Dnet.bytebuddy.experimental=true -Dmaven.compiler.useIncrementalCompilation=false test
+```
+
+结果：5 tests，0 failures，0 errors，0 skipped；`BUILD SUCCESS`。覆盖完整结果脱敏、等待／运行中部分结果、run/plan/revision 与 reportRef/draft/goal 身份漂移、CANCELLED/SUPERSEDED 过期报告、成功缺报告或不完整、完整报告伪装等待、状态与 work state 矛盾、动作合同及不可变集合。测试只使用 H2 无关的纯 DTO/投影，未启动 Docker、应用、真实数据库或模型。
+
 ## 未覆盖边界
 
 - `RevisionApplier` 是可信装配接口，本批次没有把它接入生产 `JdbcCampaignRunStore.revise` 和 `JdbcCampaignStatisticsConsumerStore.adopt`，因此不能宣称运行中 replan 已开放。
@@ -200,7 +212,7 @@ mvn.cmd -o -pl services/agent-service -am -Dtest=CampaignAgentRunResultAdapterTe
 - E57 的运行时工厂与 E59 的报告应用服务仍是显式 typed 组合件；尚无 token resolver、业务 profile、Spring bean、HTTP/chat 接线或客户端历史/导出验收。
 - E63 只提供受 profile 保护的组合契约；默认生产 profile 不启用，当前仍没有可信 owner/capability resolver、PlanValidator/Catalog、EvidenceReader 或真实授权 provider，因此不能宣称业务入口已开放。context 测试使用 H2 迁移替身，不替代真实 MySQL 或跨服务验收。
 - E64 只提供不接 transport 的 typed adapter；resolver、owner/capability 解析仍由未来可信入口提供，尚无 HTTP/chat/tool 接线、远端取消或真实 MySQL/多实例 fencing 验收。
-- E65 只提供后端 typed read projection；E66 增加纯 legacy answer 兼容桥；E67 只扩展 response 类型和纯 adapter，尚未由 Graph/AgentRunHarness/HTTP 生产路径调用，也没有 durable run→reportRef/status/nextAction 查询、客户端历史/导出入口或真实 MySQL payload 演进验收。
+- E65 只提供后端 typed read projection；E66 增加纯 legacy answer 兼容桥；E67 只扩展 response 类型和纯 adapter；E68 增加纯 run-result projection。四者尚未由 Graph/AgentRunHarness/HTTP 生产路径调用，也没有 durable run→reportRef/status/nextAction 查询、客户端历史/导出入口或真实 MySQL payload 演进验收。
 - `JdbcReportLifecycleStore` 尚未由 `CampaignReportPublisher` 或 Admin/Agent 路由自动调用；真实 MySQL 方言、跨服务 HTTP 和客户端历史/导出仍待验。
 - E53 只提供显式 durable publisher API，尚未注册到现有自然语言 chat 或 HTTP 路由；调用方仍需在可信运行装配中提供生命周期 store。
 - 本批次没有改变旧 Graph、模型循环、Docker 资源或前端行为。
